--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	 <modelVersion>4.0.0</modelVersion>
 	 <groupId>com.xzj</groupId>
-	 <artifactId>JpaPro</artifactId>
+	 <artifactId>JpaProDemo</artifactId>
 	 <version>0.0.1-SNAPSHOT</version>
 	 <name>JpaPro</name>
 	<properties>
@@ -30,20 +30,22 @@
         <mockito-version>2.0.2-beta</mockito-version>
 	</properties>
 	<dependencies>
+	<dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${org-apache-commons-version}</version>
+    </dependency>
+	<dependency>
+           <groupId>com.github.zhxuebest</groupId>
+		<artifactId>JpaPro</artifactId>
+ 		<version>0.0.1-SNAPSHOT</version>
+       </dependency>
 
-      
-		
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${org-apache-commons-version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
-            <version>${joda-time-version}</version>
-        </dependency>
+       <dependency>
+           <groupId>joda-time</groupId>
+           <artifactId>joda-time</artifactId>
+           <version>${joda-time-version}</version>
+       </dependency>
         <!--spring boot依赖-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
