--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://host:6667/db?autoReconnect=true
-spring.datasource.username=name
-spring.datasource.password=pass
+spring.datasource.url=jdbc:mysql://das.alpha.elenet.me:6667/alpha_compensation-pts_compensation_service_group?autoReconnect=true
+spring.datasource.username=pts_compensation_service_user
+spring.datasource.password=4Ke7GojgWzPQlMZrkhhN
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.tomcat.max-active=30
 spring.datasource.tomcat.initial-size=6
